# seano-command-control-unit

./: .gitignore  README.md  mav.parm  mav.tlog  mav.tlog.raw  start_seano.sh
docs/: debugging-mavros-fcu-disconnect.md  real-time-data-flow.md
docs/issue/: mavros-disconnected-arm-failed.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/seano_command/share/seano_command/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros_log/command/: command_log_20260410.csv  command_log_20260411.csv  command_log_20260412.csv  command_log_20260413.csv  command_log_20260414.csv  command_log_20260415.csv  command_log_20260417.csv  command_log_20260418.csv  command_log_20260419.csv  command_log_20260422.csv  command_log_20260424.csv  command_log_20260425.csv  waypoint_log_20260410.csv  waypoint_log_20260411.csv
ros_log/oceanography/: ctd_log_20260410.csv  ctd_log_20260412.csv  ctd_log_20260413.csv  ctd_log_20260414.csv  ctd_log_20260415.csv  ctd_log_20260416.csv  ctd_log_20260417.csv  ctd_log_20260418.csv  ctd_log_20260421.csv  ctd_log_20260424.csv  ctd_log_20260425.csv
ros_log/telemetry/: telemetry_log_20260410.csv  telemetry_log_20260412.csv  telemetry_log_20260413.csv  telemetry_log_20260414.csv  telemetry_log_20260415.csv  telemetry_log_20260416.csv  telemetry_log_20260417.csv  telemetry_log_20260418.csv  telemetry_log_20260421.csv  telemetry_log_20260422.csv  telemetry_log_20260425.csv
scripts/: install_seano_autostart.sh  rebuild_restart_seano.sh
src/: README-ROS.md
src/seano_anti_theft/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/seano_anti_theft/config/: mavlink-router-main.conf
src/seano_anti_theft/launch/: anti_theft.launch.py
src/seano_anti_theft/seano_anti_theft/: anti_theft_node.py
src/seano_cam/: README.md  check_stream.sh  monitor_stream.sh  setup.cfg  setup.py  stream_rtmp.sh
src/seano_command/: README.md  package.xml  setup.cfg  setup.py
src/seano_communication/: README.md  install-sudoers.sh  seano-network-switch  setup.cfg  setup.py
src/seano_failsafe/: README.md  esp32_battery_monitor.ino  package.xml  requirements.txt  setup.cfg  setup.py
src/seano_failsafe/seano_failsafe/: seano_battery.py  seano_battery_dummy.py  seano_failsafe.py
src/seano_logger/: package.xml  setup.cfg  setup.py
src/seano_logging/: README.md  setup.cfg  setup.py
src/seano_mission/: README.md  package.xml  setup.cfg  setup.py
(+128 files in other folders)
