<?xml version="1.0"?>
<package format="3">
  <name>seano_anti_theft</name>
  <version>0.0.1</version>
  <description>ROS2 anti-theft node for CUAV / ArduPilot telemetry monitoring</description>

  <maintainer email="seano@example.com">seano</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-paho-mqtt</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>